@@ -8,6 +8,9 @@ cdebconf (0.57) UNRELEASED; urgency=low
     - Remove unused /var/lib/cdebconf/templates and
       /var/lib/cdebconf/questions directories from cdebconf-udeb.dirs.
       Closes: #222574
+    - When templates or questions database are missing, debconf exits
+      with a return code set to 1.
+      Closes: #213165
 
  -- Denis Barbier <barbier@debian.org>  Tue,  2 Mar 2004 21:34:59 +0100
 
